# Lemma

./: COPYING  README.md  lemma.in  meson.build  org.cvfosammmm.Lemma.yml
data/: meson.build  org.cvfosammmm.Lemma.desktop  org.cvfosammmm.Lemma.metainfo.xml.in
data/resources/: style.css
data/resources/fonts/: Sans-serif.json  default.json  sans.json  serif.json
data/resources/fonts/newcomputermodern/: License.txt  README
data/resources/fonts/newcomputermodern/doc/: mathkern-example2.tex  mathscript.tex  newcm-doc.tex
data/resources/fonts/newcomputermodern/tex/: NewCM10-Book.fontspec  NewCM10-Regular.fontspec  NewCMMono10-Book.fontspec  NewCMMono10-Regular.fontspec  NewCMSans10-Book.fontspec  NewCMSans10-Regular.fontspec  newcomputermodern.sty
data/resources/fonts/newcomputermodern/tex/contrib/: NewCMcs-Regular.fontspec  NewCMcs.fontspec  NewCMcsMono-Regular.fontspec  NewCMcsMono.fontspec  NewCMcsSans-Regular.fontspec  NewCMcsSans.fontspec
data/resources/themes/: Colorful.css  default-dark.css  default.css
lemma/actions/: actions.py
lemma/animated_paned/: animated_paned.py
lemma/app/: font_manager.py  latex_db.py  service_locator.py  settings.py
lemma/application_state/: application_state.py
lemma/ast/: node.py
lemma/command_processor/: command_processor.py
lemma/commands/: command_processor.py  commands.py  primitives.py
lemma/context_menus/: document_list.py  document_view.py
lemma/cursor/: cursor.py
lemma/db/: autocomplete_db.py  character_db.py  (+1 more)
po/: POTFILES  README.md  generate-potfiles.sh  meson.build
scripts/: lemma.dev
(+452 files in other folders)
